fdo#75898 SwFEShell::InsertRow: fix this in case bSelectAll == true

Change-Id: Iaf59db6a55c3f81d11d0196d5d3e52056e31c4b1